Deployment/appdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api-inital
  namespace: "acctrainings-initial"
  labels:
    app: customer-api-inital
    service: customer-api-inital
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: customer-api-inital-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-inital
  labels:
    app: customer-api-inital
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api-inital-node
      version: v1
  template:
    metadata:
      labels:
        app: customer-api-inital-node
        version: v1
    spec:
      containers:
      - name: customer-api-inital-node
        image: quay.io/acctrainings/customer-api:%%IMG_TAG%%
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: {}
      imagePullSecrets:
        - name: quay-cred     
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acustomer-api-inital
  namespace: "acctrainings-initial"
  labels:
    app: customer-api-inital
spec:
  to:
    kind: Service
    name: customer-api-inital
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
